fixed bug where file status is not showing when file is uploading

--- a/frontend/styles/attachmentupload.module.css
+++ b/frontend/styles/attachmentupload.module.css
@@ -2,8 +2,11 @@
 .selectallcontainer {
    display: flex;
    align-items: center;
-   margin-top: 0.7rem;
    margin-bottom: 0.2rem;
+}
+
+.majorlabel {
+   margin-bottom: 0.7rem;
 }
 
 .selectallinstruction {
